js/js.translator/testData/incremental/invalidation/typeScriptExportsPerFile/main/m.d.ts
type Nullable<T> = T | null | undefined
export declare function box(stepId: number, isWasm: boolean): string;